Fixed css issue with text alignment inside buttons.

--- a/js/tinymce/skins/lightgray/Reset.less
+++ b/js/tinymce/skins/lightgray/Reset.less
@@ -16,6 +16,12 @@
 	box-sizing: content-box;
 }
 
+.mce-widget button {
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
 .mce-container *[unselectable] {
 	-moz-user-select: none;
 	-webkit-user-select: none;
